fix: github pagesのワークフローの修正
distに移動させるファイルのディレクトリのミスを修正

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Prepare artifact
         run: |
           mkdir -p dist
-          cp index.html dist/
-          cp main.js dist/
+          cp src/index.html dist/
+          cp src/main.js dist/
 
       - run: npm ci
 
