--- a/recipes/manifest.json
+++ b/recipes/manifest.json
@@ -7,6 +7,7 @@
 			"title": "パスタ",
 			"file": "pasta.json",
 			"servings": 2,
+			"genre": "italian",
 			"tags": ["pasta", "basic", "quick"],
 			"makespan": 24,          
 			"sumStepTime": 33,       
@@ -17,6 +18,7 @@
 			"title": "カレー",
 			"file": "curry.json",
 			"servings": 4,
+			"genre": "japanese",
 			"tags": ["curry", "stew", "basic"],
 			"makespan": 92,
 			"sumStepTime": 92,
@@ -27,6 +29,7 @@
 			"title": "グリーンサラダ",
 			"file": "salad.json",
 			"servings": 2,
+			"genre": "western",
 			"tags": ["salad", "quick", "healthy"],
 			"makespan": 12,
 			"sumStepTime": 17,
@@ -37,6 +40,7 @@
 			"title": "チャーハン",
 			"file": "fried_rice.json",
 			"servings": 2,
+			"genre": "chinese",
 			"tags": ["rice", "quick", "one-pan"],
 			"makespan": 16,
 			"sumStepTime": 17,
@@ -47,6 +51,7 @@
 			"title": "肉じゃが",
 			"file": "nikujaga.json",
 			"servings": 4,
+			"genre": "japanese",
 			"tags": ["stew", "japanese", "basic"],
 			"makespan": 50,
 			"sumStepTime": 55,
@@ -57,6 +62,7 @@
 			"title": "とんかつ",
 			"file": "tonkatsu.json",
 			"servings": 2,
+			"genre": "japanese",
 			"tags": ["fried", "pork", "japanese"],
 			"makespan": 22,
 			"sumStepTime": 28,
@@ -67,6 +73,7 @@
 			"title": "春巻き",
 			"file": "harumaki.json",
 			"servings": 4,
+			"genre": "chinese",
 			"tags": ["fried", "chinese", "snack"],
 			"makespan": 39,
 			"sumStepTime": 44,
@@ -77,6 +84,7 @@
 			"title": "オムライス",
 			"file": "omurice.json",
 			"servings": 2,
+			"genre": "japanese",
 			"tags": ["rice", "egg", "quick"],
 			"makespan": 18,
 			"sumStepTime": 20,
@@ -87,6 +95,7 @@
 			"title": "グラタン",
 			"file": "gratin.json",
 			"servings": 3,
+			"genre": "western",
 			"tags": ["oven", "pasta", "bake"],
 			"makespan": 40,
 			"sumStepTime": 50,
@@ -97,6 +106,7 @@
 			"title": "ハンバーグ",
 			"file": "hamburg.json",
 			"servings": 2,
+			"genre": "western",
 			"tags": ["meat", "pan", "japanese"],
 			"makespan": 41,
 			"sumStepTime": 41,
@@ -107,6 +117,7 @@
 			"title": "餃子",
 			"file": "gyoza.json",
 			"servings": 3,
+			"genre": "chinese",
 			"tags": ["dumpling", "pan", "chinese"],
 			"makespan": 33,
 			"sumStepTime": 35,
@@ -117,6 +128,7 @@
 			"title": "麻婆豆腐",
 			"file": "mapo_tofu.json",
 			"servings": 3,
+			"genre": "chinese",
 			"tags": ["chinese", "spicy", "stir-fry"],
 			"makespan": 18,
 			"sumStepTime": 20,
@@ -127,6 +139,7 @@
 			"title": "シュウマイ",
 			"file": "shumai.json",
 			"servings": 4,
+			"genre": "chinese",
 			"tags": ["dumpling", "steam", "chinese"],
 			"makespan": 34,
 			"sumStepTime": 48,
